cmake_minimum_required(VERSION 3.20)

project(cryptopals LANGUAGES C CXX)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

add_library(base64 src/base64.c ./src/convert.c)
add_library(fixed_xor src/fixed_xor.c src/score.c)
add_library(repeating_xor src/repeating_xor.c)
add_library(convert src/convert.c)
add_library(hamming src/hamming.c)
add_library(score src/score.c)
add_library(print src/print.c src/convert.c)
add_library(pkcs7 src/pkcs7.c)
add_library(aes128 src/aes128.c)
target_include_directories(base64 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
target_include_directories(fixed_xor PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
target_include_directories(repeating_xor PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
target_include_directories(convert PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
target_include_directories(hamming PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
target_include_directories(score PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
target_include_directories(pkcs7 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
target_include_directories(aes128 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)

add_executable(challenge1 src/challenge1.c)
add_executable(challenge3 src/challenge3.c)
add_executable(challenge4 src/challenge4.c)
add_executable(challenge6 src/challenge6.c)
add_executable(challenge7 src/challenge7.c)
add_executable(challenge8 src/challenge8.c)
add_executable(challenge10 src/challenge10.c)
add_executable(challenge11 src/challenge11.c)
target_link_libraries(challenge1 PRIVATE base64 convert)
target_link_libraries(challenge3 PRIVATE fixed_xor base64 score)
target_link_libraries(challenge4 PRIVATE fixed_xor base64 score print)
target_link_libraries(challenge6 PRIVATE hamming base64 fixed_xor print)
target_link_libraries(challenge7 PRIVATE base64 crypto)
target_link_libraries(challenge8 PRIVATE base64 print)
target_link_libraries(challenge10 PRIVATE base64 print crypto)
target_link_libraries(challenge11 PRIVATE crypto print pkcs7 aes128)

enable_testing()
add_subdirectory(tests)
